underscores printing to DOM

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <p id="losses">Losses: </p>
         <p id="guesses">Guesses Left: </p>
         <p id="lettersGuessed">Your Guesses Thus Far: </p>
+        <br> <br> 
+        <p id="randomWord"></p>
     </div>
 
 </body>
