added button that appears end of game

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <br> <br> 
         <p id="randomWord"></p>
     </div>
+    <br><br>
+
+    <div>
+        <button type="button" id="resetButton" >Play Again!</button>
+    </div>
 
 </body>
 
