--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- LETTERS GUESSED WRONG -->
         <div id="letters-guessed-box">
-            <p>ALREADY GUESSED: </p>
+            <p>WRONG GUESSES: </p>
             <p id="all-guesses"></p>
         </div>
 
