you win and you lose html pop up added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <button type="button" id="resetButton"> START GAME </button>
     </div>
 
+    <div id="you-win-box">
+        <p id="you-win">YOU WIN</p>
+    </div>
+
     <!-- CONTAINER FOR GAME SCORES ----------->
     <div id="score-box">
 
