css styling on music controller

--- a/index.html
+++ b/index.html
@@ -29,8 +29,22 @@
 <body>
 
     <div id="title-box">
+        <div></div>
         <p id="the-title">WORD GUESS</p>
+
+                <!-- MUSIC ----------------------------->
+        <div id="music-div">
+            <button id="music-player" type="button">&#9835;</button>
+            <button id="pause-player" type="button">&#8214;</button>
+        </div>
+
+        <audio id="music-controller">
+            <source src="./assets/images/theme.mp3" type="audio/mpeg">
+        </audio>
+
     </div>
+
+    
 
     <!-- START AND RESET BUTTON ------------>
     <div id="button-container">
@@ -63,15 +77,7 @@
     </div>
 
 
-    <!-- MUSIC ----------------------------->
-    <div id="music-div">
-        <button id="music-player" type="button">&#9835;</button>
-        <button id="pause-player" type="button">&#8214;</button>
-    </div>
 
-    <audio id="music-controller">
-        <source src="./assets/images/theme.mp3" type="audio/mpeg">
-    </audio>
 
 
 </body>
