should now load properly on mobile devices

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 <body>
 
     <div id="title-box">
-        <div></div>
+        <!-- EMPTY ON PURPOSE -->
+        <div>
+        </div>
+        
+        <!-- TITLE OF GAME ----------------------------->
         <p id="the-title">WORD GUESS</p>
 
-                <!-- MUSIC ----------------------------->
+        <!-- MUSIC ----------------------------->
         <div id="music-div">
             <button id="music-player" type="button">&#9835;</button>
             <button id="pause-player" type="button">&#8214;</button>
