mobile keyboard and functionality added - current bug- keyboard repeats after play

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- PAGE TITLE -->
@@ -32,7 +33,7 @@
         <!-- EMPTY ON PURPOSE -->
         <div>
         </div>
-        
+
         <!-- TITLE OF GAME ----------------------------->
         <p id="the-title">WORD GUESS</p>
 
@@ -69,9 +70,10 @@
         </div>
 
         <div id="random-word-box">
-            <p id="randomWord"></p>
+            <p id="randomWord">
+            </p>
         </div>
-
+        <div id="buttons"></div>
         <!-- LETTERS GUESSED WRONG -->
         <div id="letters-guessed-box">
             <p>WRONG GUESSES: </p>
