mobile keyboard fix, no longer duplicating

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
             <p id="randomWord">
             </p>
         </div>
+
+        <!-- DIV FOR BUTTONS-->
         <div id="buttons"></div>
+
         <!-- LETTERS GUESSED WRONG -->
         <div id="letters-guessed-box">
             <p>WRONG GUESSES: </p>
