--- a/index.html
+++ b/index.html
@@ -25,28 +25,27 @@
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxanium:700,800&display=swap" rel="stylesheet">
 
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+
 </head>
 
 <body>
-
-    <div id="title-box">
-        <!-- EMPTY ON PURPOSE -->
-        <div>
-        </div>
-
-        <!-- TITLE OF GAME ----------------------------->
-        <p id="the-title">WORD GUESS</p>
-
-        <!-- MUSIC ----------------------------->
+    <!-- MUSIC ----------------------------->
+    <div id="music-box">
         <div id="music-div">
-            <button id="music-player" type="button">&#9835;</button>
-            <button id="pause-player" type="button">&#8214;</button>
+            <button id="music-player" type="button"><i class="fas fa-music"></i></button>
+            
+            <button id="pause-player" type="button"><i class="far fa-pause-circle"></i></button>
         </div>
 
         <audio id="music-controller">
             <source src="./assets/images/theme.mp3" type="audio/mpeg">
         </audio>
+    </div>
 
+    <div id="title-box">
+        <!-- TITLE OF GAME ----------------------------->
+        <p id="the-title">WORD GUESS</p>
     </div>
 
     
