remove flicker on load

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
 
+    <script>document.documentElement.className += 'js';</script>
+
 </head>
 
 <body>
