fixed music bug

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <body>
     <!-- MUSIC ----------------------------->
-    <div id="music-box">
         <div id="music-div">
-            <button id="music-player" type="button"><i class="fas fa-music"></i></button>
+
+            <button id="music-player" type="button" onclick="alert('click event occured')"><i class="fas fa-music"></i></button>
             
             <button id="pause-player" type="button"><i class="far fa-pause-circle"></i></button>
         </div>
@@ -43,7 +43,6 @@
         <audio id="music-controller">
             <source src="./assets/images/theme.mp3" type="audio/mpeg">
         </audio>
-    </div>
 
     <div id="title-box">
         <!-- TITLE OF GAME ----------------------------->
